[package]
name = "orbit"
version = "0.1.0"
edition = "2021"

[dependencies]
nebula = { path = "../nebula" }
starlink = { path = "../starlink" }
supernova = { path = "../supernova" }

# heapless =
typenum = "1.17.0"
generic-array = "1.0.0"
# bwrap = "1.3.0" # [[ text wrapping ]]
# unicode-segmentation = "1.11.0" # [[ text graphemes ]]
